fixed compiler errors in java 17 and lower